# SPDX-FileCopyrightText: 2025 Stephane Neveu
# SPDX-FileCopyrightText: 2025 Luc Bonnafoux
# SPDX-License-Identifier: GPL-3.0-only

[workspace]
resolver = "2"
members = [
    "keysas-core/",
    "keysas-io/",
    "keysas-backend/",
    "keysas-sign/",
    "keysas-fido/",
    "keysas_lib/",
]

exclude = [
    "keysas-admin/src-tauri",
    "keysas-firewall"
]
