# SPDX-FileCopyrightText: 2025 Stephane Neveu
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "keysas-backend"
version = "2.7.0"
edition = "2024"


[dependencies]
tungstenite = "0.28"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
anyhow = "1.0"
regex = "1"
libc = "0.2"
nom = "8"
nix = { version = "0.30", features = ["net"]}
landlock = "0.4" 
http = "1"

[dev-dependencies]
criterion = "0.7"
env_logger = "0.11"
input_buffer = "0.5"
socket2 = "0.6"
rand = "0.9"

[[bin]]
name = "keysas-backend"
path = "src/main.rs"
