# SPDX-FileCopyrightText: 2025 Stephane Neveu
# SPDX-FileCopyrightText: 2025 Luc Bonnafoux
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "keysas-sign"
version = "2.7.0"
edition = "2024"

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "cargo"] }
anyhow = "1.0"
ed25519-dalek = "2"
pkcs8 = { version = "0.10", features = ["encryption", "pem"]}
keysas_lib = { path = "../keysas_lib" }
x509-cert = "0.2"
tempfile = "3"
